# riip-demo

./: .gitignore  README.md  bootstrap.md  llm.py  project_plan.yaml
core/: .generated.py  Makefile  README.md  base-prompt.json  gen-1.py  gen-2-specs.txt  gen-2-test.py  gen-2.py  gen-3-golang-specs.yaml  gen-3-java-specs.yaml  gen-3-rust-specs.yaml  llm_client.py  test_input.yaml
core/gen-3/golang-local/: architecture.yaml  go.mod  go.sum  golang-guide.md  implementation.yaml
core/gen-3/java-jbang/: Dockerfile
core/gen-3/rust-container/: Dockerfile  build.py  rust-guide.txt
core/gen-3/rust-container/project/: Cargo.toml  architecture.yaml  implementation.yaml
core/gen-3/rust-container/project/src/: args.rs  aws_client.rs  chat.rs  code_gen.rs  error.rs  execute.rs  files.rs  main.rs  types.rs  yaml.rs
core/gen-3/ts-container/: Dockerfile
core/targets/golang-local/: gen-2.go  go.mod  go.sum  guidance.txt
core/targets/java-container/: Dockerfile  jbang-deps.txt
core/targets/rust-container/: Cargo.toml  Dockerfile  guidance.txt
core/targets/ts-container/: Dockerfile
core/testdata/: main.py  test.yaml  validator.py
core/testdata/testdata/: main.py  validator.py
sample-projects/: primes.yaml  tic_tac_toe.yaml
sample-projects/poodah/: README.md  architecture-task.txt  build-all.py  generate.py  java-aws-sam.txt  project_definition.yaml  riip-tools.yaml
sample-projects/primes/: Dockerfile  README.md  architecture.yaml
sample-projects/primes/.prompts/: prompt_1729550580017091600.prompt  prompt_1729550637773960700.prompt  (+6 more)
(+15 files in other folders)
