[package]
name = "gen-3"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-bedrockruntime = "1.58.0"
aws-config = "1.1.7"
aws-types = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34-deprecated"
tokio = { version = "1.39", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
